--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
         </p>
       </div>
       <div class="avatar">
-        <img class="user-img" src="images/avatar-michelle.jpg" alt="">
-        <div class="details">
-          <h3>Michelle Appleton</h3>
-          <p>28 Jun 2020</p>
+        <div class="user-container">
+          <img class="user-img" src="images/avatar-michelle.jpg" alt="">
+          <div class="details">
+            <h3>Michelle Appleton</h3>
+            <p>28 Jun 2020</p>
+          </div>
         </div>
         <div class="share-icon-container">
           <img src="images/icon-share.svg" alt="" class="share-icon">
@@ -42,7 +44,6 @@
           <img onclick="hide()" src="images/icon-facebook.svg" alt="facebook icon">
           <img onclick="hide()" src="images/icon-twitter.svg" alt="twitter icon">
           <img onclick="hide()" src="images/icon-pinterest.svg" alt="pinterest icon">
-          <div class="share-icon-container"></div>
         </div>
         <div class="triangle"></div>
       </div>
