--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <section class="card">
     <div class="img-container"></div>
-    <main>
+    <section class="main">
       <div class="description">
         <h2>Shift the overall look and feel by adding these wonderful 
           touches to furniture in your home
@@ -59,7 +59,7 @@
           </div>
         </div>
       </div>
-    </main>
+    </section>
   </section>
   <script src="js/main.js"></script>
 </body>
