--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <section class="card">
+  <div class="card">
     <div class="img-container"></div>
     <section class="main">
       <div class="description">
@@ -60,7 +60,7 @@
         </div>
       </div>
     </section>
-  </section>
+  </div>
   <script src="js/main.js"></script>
 </body>
 </html>
